[gd_scene load_steps=5 format=2]

[ext_resource path="res://Boss.gd" type="Script" id=1]
[ext_resource path="res://warped city files/SPRITES/vehicles/v-yellow.png" type="Texture" id=2]
[ext_resource path="res://turret_fire.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 59.2069

[node name="Boss" type="KinematicBody2D" groups=[
"Enemies",
]]
collision_layer = 4
collision_mask = 10
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.64148, -3.77354 )
shape = SubResource( 1 )

[node name="PhaseTimer" type="Timer" parent="."]
wait_time = 6.0

[node name="ShotSpawn" type="Node2D" parent="."]
position = Vector2( -82.2631, 23.0186 )

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="ShotSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -18.087

[node name="DroneTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Tween" type="Tween" parent="."]
[connection signal="timeout" from="PhaseTimer" to="." method="_on_PhaseTimer_timeout"]
[connection signal="timeout" from="ShotTimer" to="." method="fire"]
[connection signal="timeout" from="DroneTimer" to="." method="spawn_drone"]
